Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-2403

libuv based proactor test errors

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.34.0
    • proton-c-0.36.0
    • proton-c
    • None
    • Builds using the libuv proactor.

    Description

      New test failures are seen with recent versions of libuv.  At least starting with version 1.41 of libuv and perhaps earlier.

      Attachments

        1. pn2403_0.diff
          1 kB
          Clifford Jansen

        Issue Links

          Activity

            People

              cliffjansen Clifford Jansen
              cliffjansen Clifford Jansen
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: