PROTON-2403: libuv proactor update for newer libuv library versions